# Web_Scraper

./: .gitignore  Cargo.toml  README.md  mydatabase.db-shm
redditStories/MaliciousCompliance/: Heres_a_quick_one_you_sure_you_want_to_be_added_to_the_email_list.json  Im_TELLING_YOU_that_freezer_has_been_fixed_put_everything_back_in_it.json  My_apartment_complex_became_smoke_free.json  My_daughter_is_apparently_going_to_be_a_future_member.json  No_one_enters.json  Stopped_doing_what_I_wasnt_paid_for.json  Water_main_burst_maintenance_guy_told_me_to_stop_dumping_water_out_the_window.json  You_hang_up_no_you.json  You_want_a_FAX_OK_Heres_the_FAX.json
redditStories/entitledparents/: Entitled_Mom_keeps_telling_her_kid_to_take_my_things.json  Entitled_mom_demanded_I_stop_my_dog_from_barking_while_her_kid_screamed_nonstop.json  My_dad_said_he_wants_to_bang_a_girl_with_me.json  My_mom_is_lazy_and_entitled.json
redditStories/tifu/: TIFU_but_we_still_had_lunch.json  TIFU_by_buying_a_massive_doubledoor_fridge_without_measuring_literally_anything_in_my_apartment.json  TIFU_by_causing_a_sixthgrade_field_trip_to_have_a_traumatic_bathroom_experience.json  TIFU_by_forgetting_to_change_my_Doctor_Who_ringtone_before_a_date.json  TIFU_by_giving_my_mom_an_accidental_heart_attack_with_a_stuffed_raccoon.json  TIFU_by_making_my_office_enact_martial_law_due_to_my_cooking.json  TIFU_by_responding_you_too_when_the_doctor_said_take_your_pants_off.json  TIFU_by_taking_edibles_and_ordering_500_nuggets_on_DoorDash.json  (+4 more)
src/: main.rs  models.rs  myredditapi.rs  readnwrite.rs
